--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,80 @@
 * {
-    padding: 0;
-    margin: 0;
-  }
-  
-  img.small {
-    max-height: 10rem;
-    margin-bottom: 0.2rem;
-  }
-  
-  .coffee-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .card {
-    background-color: #ffe100;
-    border-radius: 10px;
-    padding: .5em;
-    box-shadow: 0px 5px 5px #b2bec3;
-    text-align: center;
-    margin: .5em .5em;
-  }
-  
-  header {
-    color: black;
-    background-color: #ffe100;
-    text-align: center;
-  }
-  
-  h1,h2,h3 {
-    margin: 0.5rem 0;
-  }
-  
-  h1 {
-    font-family: arial;
-    font-size: 1.5rem;
-    text-align: center;
-  }
-  
-  h3 {
-    font-size: 1rem;
-  }
-  
-  .row {
-      display:flex;
-      justify-content: left;
-      flex-wrap: wrap;
-    }
-  
-  button {
-      font-size: 1rem;
-      padding: 0.2rem;
-      margin: 0.1rem;
-      border-radius: 0.5rem;
-      border: 0.1rem black solid;
-      background-color: lightgreen;
-      width: 100%;
-      cursor: pointer;
-    }
-  @media only screen and (min-width: 300px) {
-      .coffee-container {
-        justify-content: left;
-      }
-    }
-    
+  padding: 0;
+  margin: 0;
+}
+
+img.small {
+  max-height: 10rem;
+  margin-bottom: 0.2rem;
+}
+
+.card {
+  background-color: #ffe100;
+  border-radius: 10px;
+  padding: 0.5em;
+  box-shadow: 0px 5px 5px #b2bec3;
+  text-align: center;
+  margin: 0.5em 0.5em;
+}
+
+header {
+  color: black;
+  background-color: #ffe100;
+  text-align: center;
+}
+
+h2,
+h3 {
+  margin: 0.5rem 0;
+}
+
+h1 {
+  font-family: arial;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+h3 {
+  font-size: 1rem;
+}
+
+.row {
+  display: flex;
+  justify-content: left;
+  flex-wrap: wrap;
+}
+
+button {
+  font-size: 1rem;
+  padding: 0.2rem;
+  margin: 0.1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem black solid;
+  background-color: lightgreen;
+  width: 100%;
+  cursor: pointer;
+}
+.block {
+  background-color: #ffe100;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.row2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.col-1 {
+  flex: 1;
+}
+
+.col-2 {
+  flex: 2;
+}
+
+.container {
+  padding: 0.5rem;
+  margin: 0.5rem;
+}
