--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,52 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
-img.small {
+p {
+  margin: 0;
+  padding: 0.1rem;
+}
+
+.block {
+  background-color: #ffe100;
+  margin: 1rem 1rem;
+  padding: 0.1rem;
+  border-radius: 0.3rem;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
+
+h1 {
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 0.2rem;
+}
+
+h3 {
+  font-size: 1rem;
+  text-align: center;
+
+}
+
+.card {
+  background-color: #ffe100;
+  border-radius: 8px;
+  box-shadow: 0px 5px 5px #b2bec3;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+button {
+  margin-top: 0.4rem;
+  font-size: 1rem;
+}
+
+/* img.small {
   height: 10rem;
   width: 8rem;
   margin-bottom: 0.2rem;
@@ -79,3 +122,4 @@ button {
   padding: 0.5rem;
   margin: 0.5rem;
 }
+ */
