--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ h3 {
   border-radius: 8px;
   box-shadow: 0px 5px 5px #b2bec3;
   text-align: center;
-  margin-bottom: 1rem;
+  margin: 1rem 1rem;
 }
 
 button {
