--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
   padding: 0;
 }
 
+.nav-right {
+  float: right;
+  padding: 0.1rem;
+  margin-right: 1rem;
+}
+
 p {
   margin: 0;
   padding: 0.1rem;
@@ -23,7 +29,7 @@ img {
 
 h1 {
   font-size: 1.5rem;
-  text-align: center;
+  text-align: left;
   padding: 0.2rem;
 }
 
