--- a/src/index.css
+++ b/src/index.css
@@ -1,55 +1,92 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Helvetica Neue LT W1G', sans-serif;
+  background-color: #e7e7e7;
+}
+
+.background {
+  background-color: #ffe100;
+  background-clip: border-box;
 }
 
 .nav-right {
   float: right;
   padding: 0.1rem;
-  margin-right: 1rem;
+  margin-right: 0.3rem;
+  margin-top: 0.2rem;
 }
 
 p {
   margin: 0;
-  padding: 0.1rem;
+  background-color: #ffe100;
+}
+
+.header {
+  height: 30px;
 }
 
 .block {
   background-color: #ffe100;
-  margin: 1rem 1rem;
-  padding: 0.1rem;
+  margin: 0.3rem;
   border-radius: 0.3rem;
 }
 
-img {
+
+
+
+.card-img-top img {
   width: 100px;
   height: 100px;
   object-fit: cover;
+  background-color: #ffe100;
+}
+
+.card {
+  background-color: #ffe100;
+}
+
+.header img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 h1 {
   font-size: 1.5rem;
   text-align: left;
-  padding: 0.2rem;
+  padding-top: 0.5rem;
+  padding-left: 0.2rem;
+  margin-top: 0.2rem;
+  background-color: #ffe100;
 }
 
 h3 {
   font-size: 1rem;
   text-align: center;
-
+  background-color: #ffe100;
 }
 
 .card {
   background-color: #ffe100;
   border-radius: 8px;
-  box-shadow: 0px 5px 5px #b2bec3;
+  /* box-shadow: 0px 5px 5px #b2bec3; */
   text-align: center;
-  margin: 0.5rem 1rem;
+  margin: 0.3rem 0.2rem;
 }
 
-button {
+.btn {
   margin-top: 0.4rem;
   font-size: 1rem;
+  background-color: #999999; 
+  color: white;
+}
+
+.btn:hover {
+  background-color:#e7e7e7;
+  transition: 0.7s;
 }
 
 /* img.small {
