--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,17 @@
 }
 
 .nav-right {
-  float: right;
-  padding: 0.1rem;
-  margin-right: 0.3rem;
-  margin-top: 0.2rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 30px;
+}
+
+.header img {
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 p {
@@ -46,13 +53,6 @@ p {
   background-color: #ffe100;
 }
 
-.header img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
-  max-height: 100%;
-}
 
 h1 {
   font-size: 1.5rem;
