--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Helvetica Neue LT W1G', sans-serif;
   background-color: #e7e7e7;
+  font-family: 'Helvetica Neue LT W1G 400', sans-serif; /* https://www.cdnfonts.com/helvetica-neue-lt-w1g.font */
 }
 
 .background {
@@ -61,12 +61,15 @@ h1 {
   padding-left: 0.2rem;
   margin-top: 0.2rem;
   background-color: #ffe100;
+  font-family: 'Helvetica Neue LT W1G', sans-serif;
 }
 
 h3 {
   font-size: 1rem;
   text-align: center;
   background-color: #ffe100;
+  
+  font-family: 'Helvetica Neue LT W1G', sans-serif;
 }
 
 .card {
