--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,11 @@ h3 {
   margin: 0.3rem 0.2rem;
 }
 
+.card-height {
+  height: 75px;
+  background-color: #ffe100;
+}
+
 .btn {
   font-size: 1rem;
   background-color: #999999;
