--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,10 @@ p {
   background-color: #ffe100;
 }
 
+.card-height {
+  height: 75px;
+  background-color: #ffe100;
+}
 
 h1 {
   font-size: 1.5rem;
